--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "_redirects",
               {
                 "glob": "_redirects",
                 "input": "src",
