--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
