--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "jszip": "^3.9.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "~13.2.1",
     "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
