--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "angularx-qrcode": "^11.0.0",
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
